added weight adapter
